2003-09-04  Andrew Cagney  <cagney@redhat.com>

	* configure.tgt: Add "mips64*-*-*" target.  Delete
	mips64*el-*-ecoff*, mips64*el-*-elf*, mips*el-*-ecoff*,
	mips*el-*-elf*, mips*-*-lnews*, mips*-*-sysv*, mips*-*-riscos*,
	mips*-*-ecoff*, mips*-*-elf*, mips*-little-*, mips*-big-*,
	mips*-dec-*, mips64*-big-*, mips64*vr*-*-elf*, mips64*-*-ecoff*,
	mips*-sony-*, and mips64*-*-elf* targets.
	* config/mips/embedl.mt: Delete file.
	* config/mips/embedl64.mt: Delete file.
	* config/mips/mips.mt: Delete file.
	* config/mips/mips64.mt: Delete file.
	* config/mips/tm-embed.h: Delete file.
	* config/mips/embed.mt (TM_FILE): Set to "tm-mips.h".
	* config/mips/embed64.mt: Delete out-of-date comment.

2003-09-04  Andrew Cagney  <cagney@redhat.com>

	* hppa-tdep.c (hppa_gdbarch_init): Set
	"have_nonsteppable_watchpoint".
	* config/pa/nm-hppah.h (HAVE_NONSTEPPABLE_WATCHPOINT): Delete.
	* mips-tdep.c (mips_dump_tdep): Do not print
	HAVE_NONSTEPPABLE_WATCHPOINT.
	(mips_gdbarch_init): Set "have_nonsteppable_watchpoint".
	* config/mips/tm-embed.h (HAVE_NONSTEPPABLE_WATCHPOINT): Delete.
	* config/mips/nm-irix5.h (HAVE_NONSTEPPABLE_WATCHPOINT): Delete.
	* config/mips/nm-irix4.h (HAVE_NONSTEPPABLE_WATCHPOINT): Delete.

2003-09-04  Corinna Vinschen  <vinschen@redhat.com>

	* breakpoint.c (watchpoint_check): Remove accidentally checked in
	unused code.  Add comment.

2003-09-04  Corinna Vinschen  <vinschen@redhat.com>

	* breakpoint.c (watchpoint_check): Check for pc being in an
	epilogue if watchpoint frame couldn't be found.

2003-09-04  Andrew Cagney  <cagney@redhat.com>

	* Makefile.in: Re-generate all dependencies.

2003-09-03  Andrew Cagney  <cagney@redhat.com>

	* arch-utils.h (legacy_print_insn): Delete declaration.
	* arch-utils.c (legacy_print_insn): Delete function.
	* disasm.c (deprecated_tm_print_insn_info): Delete.
	(_initialize_disasm): Delete function, contained code initializing
	deprecated_tm_print_insn_info.
	* gdbarch.sh (deprecated_tm_print_insn): Delete.